Fix mobile layout breakage

--- a/src/sass/adalida_page/cyph.scss
+++ b/src/sass/adalida_page/cyph.scss
@@ -9,7 +9,6 @@ li {
 
 .caption {
   border-bottom: 0.1em solid black;
-  width: max-content;
 }
 
 .picture-caption {
